force-app/main/default/objects/ccrz__E_StoredPayment__c/ccrz__E_StoredPayment__c.object-meta.xml
<CustomObject>
    <description>The stored payment object is used to store saved or walleted payment information.</description>
    <label>CC Stored Payment</label>
    <nameField>
        <label>CC Stored Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Stored Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>