force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__Account__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account for which the Stored Payment is Available</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC Stored Payments</relationshipLabel>
    <relationshipName>CC_Stored_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>