force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__AccountAccessible__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AccountAccessible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator if this payment method is available to all users within an Account.</description>
    <label>Account Accessible</label>
    <type>Checkbox</type>
</CustomField>