force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AccountNumber__c</fullName>
    <description>The Account Number of the payment method. For credit cards this would be the final 4 digits.</description>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>