force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__AccountType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AccountType__c</fullName>
    <description>The Account Type of the Stored Payment such as Credit Card, PO Number, etc.  Should match the corresponding account type as setup in page configuration.</description>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>