force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayName__c</fullName>
    <description>The user entered name of the stored payment.</description>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>