force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__EffectiveAccountID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EffectiveAccountID__c</fullName>
    <description>Holds the effective account for this Stored Payment. This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own. The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</description>
    <inlineHelpText>This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own. The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</inlineHelpText>
    <label>Effective Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>