force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__ExpMonth__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExpMonth__c</fullName>
    <description>The expiration month of the Stored Payment. Zero Based, e. g. January = 0.</description>
    <label>Exp Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>