force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__ExpYear__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExpYear__c</fullName>
    <description>The expiration year of the Stored Payment.</description>
    <label>Exp Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>