force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__Name__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Name__c</fullName>
    <description>CCSP-{00000000}</description>
    <displayFormat>CCSP-{00000000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>