force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PaymentType__c</fullName>
    <description>Specific sub-type of the Stored Payment, for example, for Credit Cards this would be the card type.</description>
    <label>Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>