force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StartDate__c</fullName>
    <description>Start Date that a Stored Payment will be Available.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>