force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__StoredPaymentId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StoredPaymentId__c</fullName>
    <description>External ID For Stored Payments.  Not used by B2B Commerce.</description>
    <externalId>true</externalId>
    <label>Stored Payment Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>