force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__Storefront__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Storefront__c</fullName>
    <description>The Storefront associated with this Stored Payment.</description>
    <label>Storefront</label>
    <length>255</length>
    <type>Text</type>
</CustomField>