force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__SubaccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubaccountNumber__c</fullName>
    <description>Sub-account number.</description>
    <label>Subaccount Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>