force-app/main/default/objects/ccrz__E_StoredPayment__c/fields/ccrz__Token__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Token__c</fullName>
    <description>Tokenized form of the payment method</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>